added_GA_and_disqus

--- a/pages/StaySafeGenevaProject.html
+++ b/pages/StaySafeGenevaProject.html
@@ -2,20 +2,18 @@
 layout: page
 title: Risk Calculator
 subtitle: Measure the road safety in Geneva
-permalink: /pages/risk_calculator/
+permalink: /pages/StaySafeGenevaProject/
 ---
 
 <p>
-  The Risk calculator computes the safety of the roads
-  of Geneva. It can easily be generalised to other Swiss Cities and could
-  also be used worldwide with a bit more of an effort.
+  Please visit the
+  <a href="http://StaySafeGeneva.github.io/"> StaySafeGeneva</a>.
+  website.
 </p>
 
 <hr>
 
 <!-- <img src='safety_first_second.png'> -->
-
-
 <p>
   Few preliminary notes:
   <ul>
