changed_base_layout

--- a/pages/StaySafeGenevaProject.html
+++ b/pages/StaySafeGenevaProject.html
@@ -181,6 +181,8 @@ if (raceQuery) {
 }
 </script>
 
+<!-- Here below is for disqus -->
+<!--
 <div id="disqus_thread"></div>
 <script>
 
@@ -201,3 +203,6 @@ s.setAttribute('data-timestamp', +new Date());
 })();
 </script>
 <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+-->
+
+<!-- End of file -->
