--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ use-site-title: true
         </p>
       </div>
       <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
-        <img src="../img/luca_profile.jpeg" alt="Luca" align="right" class="img-circle us-img"/>
+        <img src="../img/luca_profile.jpeg" alt="Luca" align="right" class="img-rounded"/>
       </div>
     </div>
 </div>
