--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ use-site-title: true
       <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8">
         <p>
           Student of Mathematical engineering, I like to discover new cultures and
-          learn new languages. My academic interests are the mathematical modelling
+          learn new languages. My academic interest is the mathematical modelling
           of engineering problems, be it through numerical analysis or machine learning.
           Other than that I sometimes play with data for fun or discover some new
           coding languages.
