--- a/index.html
+++ b/index.html
@@ -39,9 +39,13 @@ use-site-title: true
     Riemann hypothesis </a> <br />
 </p>
 
-<h2> Here is the blog section, feel free to give it a look! </h2>
-Not much for the moment, but more to come?
+<hr>
+<hr>
+<hr>
 
+<h1> Below is the blog section, feel free to give it a look! </h1>
+Only tests for the moment, but more to come?
+<hr>
 <!-- Here i the code for the posts -->
 <div class="posts-list">
   {% for post in paginator.posts %}
