--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@ use-site-title: true
           Student of Mathematical engineering, I like to discover new cultures and
           learn new languages. My academic interest is the mathematical modelling
           of engineering problems, be it through numerical analysis or machine learning.
-          Other than that I sometimes play with data for fun or discover some new
-          coding languages.
+          Other than that I sometimes play with data for fun or discover new languages.
         </p>
       </div>
       <div class="col-xs-4 col-sm-4 col-md-4 col-lg-4">
@@ -23,6 +22,12 @@ use-site-title: true
       </div>
     </div>
 </div>
+
+
+<div class="container-fluid">
+  Feel free to check the project page with the projects I made
+</div>
+
 
 
 <h2> For the curious visiting this site, here are some curiosities: </h2>
