--- a/pages/test.html
+++ b/pages/test.html
@@ -30,3 +30,17 @@ title: Take a view of the night sky
     </div>
   </div>
 </div>
+
+<h3> For the curious visiting this site, here are some curiosities: </h3>
+<p>
+  - <a href="https://en.wikipedia.org/wiki/Lagrange%27s_four-square_theorem#The_classical_proof">
+    Lagrange four square theorem </a> <br />
+  - <a href="https://www.britannica.com/science/Fermats-last-theorem">
+    Fermat last theorem </a> <br />
+  - <a href="https://en.wikipedia.org/wiki/God%27s_algorithm">
+    God's algorithm </a> <br />
+  - <a href="https://en.wikipedia.org/wiki/Minimax">
+    Minimax </a> <br />
+  - <a href="https://en.wikipedia.org/wiki/Riemann_hypothesis">
+    Riemann hypothesis </a> <br />
+</p>
