--- a/index.html
+++ b/index.html
@@ -34,23 +34,23 @@ use-site-title: true
 
 <ul>
 <li>
-  <b> Fast Inference for Machine Learning in ROOT/TMVA </b> <br />
-  Kim Albertsson, Sitong An, Lorenzo Moneta, Stefan Wunsch, Luca Zampieri (minor contributions) <br />
-  Conference of High Energy Physics • <a href="https://indico.cern.ch/event/773049/contributions/3476168/attachments/1937600/3211545/TMVA_Fast_Inference_Poster.pdf"> Poster </a> <br />
-</li>
-<li>
   <b> Geometric Deep Learning for Volumetric Computational Fluid Dynamics </b> <br />
   Luca Zampieri<br />
-  EPFL • <a href="https://infoscience.epfl.ch/record/267539?ln=en"> Master thesis </a> <br />
+  EPFL 2019 • <a href="https://infoscience.epfl.ch/record/267539?ln=en"> Master thesis </a> <br />
+</li>
+<li>
+  <b> Fast Inference for Machine Learning in ROOT/TMVA </b> <br />
+  Kim Albertsson, Sitong An, Lorenzo Moneta, Stefan Wunsch, Luca Zampieri (minor contributions) <br />
+  Conference of High Energy Physics 2019 • <a href="https://indico.cern.ch/event/773049/contributions/3476168/attachments/1937600/3211545/TMVA_Fast_Inference_Poster.pdf"> Poster </a> <br />
 </li>
 <li>
   <b> A fast inference engine for Boosted Decision Trees </b> <br />
   Luca Zampieri<br />
-  Cern archives • <a href="http://cds.cern.ch/record/2688585/"> Report </a> <br />
+  Cern archives 2019 • <a href="http://cds.cern.ch/record/2688585/"> Report </a> <br />
 </li>
 <li>
   <b> Stay Safe Geneva </b> <br />
-  Luca Zampieri, Martino Milani, xavier Gilcompanys <br />
+  Luca Zampieri, Martino Milani, Xavier Gilcompanys <br />
   AMLD 2018 • <a href="https://staysafegeneva.github.io/"> Website </a> <br />
   Best 3 projects award in Applied Data Analysis course <br />
 </li>
