--- a/pages/travels.html
+++ b/pages/travels.html
@@ -29,7 +29,7 @@ use-site-title: true
 
 <h3> Plane to Milan </h3>
 <div class="container-fluid"> <!-- If Needed Left and Right Padding in 'md' and 'lg' screen means use container class -->
-  They re-instated the plane from Geneva to Milan after years of inactivity! The low flights allows to observe the alps from up close!
+  They re-instated the plane from Geneva to Milan after years of inactivity! The low flights allow to observe the alps from up close!
     <div class="row">
       <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
         <img src="/img/travels/plane_milan/IMG_20190721_175846.jpg" alt="Luca" align="right" class="img-rounded"/>
