--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ Feel free to explore more about me or contact me directly on your prefered chann
 <p>
 <a href="https://github.com/LucaZampieri"> Github </a> <br />
 <a href="https://www.linkedin.com/in/luca-z-94a07447/"> Linkedin </a> <br />
-<a href="mailto: luca.zampieri@epfl.alumni.ch"> Email </a> <br />
+<a href="mailto: luca.zampieri@protonmail.com"> Email </a> <br />
 </p>
 
 <hr>
